[package]
name = "Rshell"
version = "0.1.0"
edition = "2021"
authors = ["Simone Orlando <simone.orlando2003@gmail.com>"]
license = "MIT"
description = "A basic & lightweight shell"
readme = "README.md"
homepage = "https://github.com/Gyrandola/Rshell"
repository = "https://github.com/Gyrandola/Rshell"
keywords = ["cli", "shell", "demo", "terminal"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]